OnboardingV2Minimal/force-app/main/default/objects/ECC_Field_Display_Configuration__c/fields/ECC_Field_Configuration_Group__c.field-meta.xml
<CustomField>
    <fullName>ECC_Field_Configuration_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent config group</description>
    <label>ECC Field Configuration Group</label>
    <referenceTo>ECC_Field_Configuration_Group__c</referenceTo>
    <relationshipLabel>ECC Field Display Configurations</relationshipLabel>
    <relationshipName>ECC_Field_Display_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>