OnboardingV2Minimal/force-app/main/default/objects/ECC_Field_Display_Configuration__c/fields/External_Contact_Credential_Type__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_Credential_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Filter which credential type this config applies to</description>
    <label>External Contact Credential Type</label>
    <referenceTo>External_Contact_Credential_Type__c</referenceTo>
    <relationshipLabel>ECC Field Display Configurations</relationshipLabel>
    <relationshipName>ECC_Field_Display_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>