OnboardingV2Minimal/force-app/main/default/objects/ECC_Field_Display_Configuration__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>API name of the field (e.g. POE_Username__c)</description>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>