OnboardingV2Minimal/force-app/main/default/objects/ECC_Field_Display_Configuration__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>Label override (optional)</description>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>