OnboardingV2Minimal/force-app/main/default/objects/ECC_Field_Display_Configuration__c/fields/Input_Type__c.field-meta.xml
<CustomField>
    <fullName>Input_Type__c</fullName>
    <description>text / date / combobox / etc.</description>
    <label>Input Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>combobox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>