OnboardingV2Minimal/force-app/main/default/objects/ECC_Field_Display_Configuration__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for validation (optional)</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>