OnboardingV2Minimal/force-app/main/default/objects/ECC_Field_Display_Configuration__c/fields/Visible__c.field-meta.xml
<CustomField>
    <fullName>Visible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Show or hide</description>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>