OnboardingV2Minimal/force-app/main/default/objects/ECC_Field_Display_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Field_Label__c</columns>
    <columns>ECC_Field_Configuration_Group__c</columns>
    <columns>External_Contact_Credential_Type__c</columns>
    <columns>Visible__c</columns>
    <columns>Read_Only__c</columns>
    <columns>Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>